src/styles.css
body {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  margin: 0px;
}

/* Header */
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  position: fixed;
  z-index: 1;
  border-bottom: 5px solid rgb(170, 1, 1);
  box-shadow: 0px 5px 10px rgb(45, 44, 44);
  color: rgb(255, 255, 255);
  text-shadow: 4px 4px 4px rgba(28, 10, 10, 0.5);
  padding: 10px 0px 10px 0px;
  background-image: url('./assets/header-background.png');
  background-size: cover;
}

#header-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between; /* Adjust this to control the space between header and navbar */
  align-items: center;
  width: 100%;
}

#name {
  font-size: 25px;
  padding-left: 20px;
}

#nav {
  display: flex;
  flex-wrap: wrap;
  order: 1;
  width: 100%;
}

#nav-list {
  list-style: none;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin: 0;
  text-align: center;
}

#nav li {
  font-size: 18px;
  font-weight: bold;
  margin-left: 15px;
}

#nav li a {
  text-decoration: none;
  color: #ffffff;
}

#nav li a:hover,
#nav li a.active {
  color: rgb(170, 1, 1);
  transition: color 0.2s ease, box-shadow 0.2s ease;
  text-shadow: 1px 1px 7px rgba(255, 255, 255, 0.5);
}

/* Media query for smaller screens */
@media (max-width: 768px) {
  #header-content {
    flex-direction: column;
    align-items: flex-start;
  }
}

/* Profile */
#profile-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: white;
  padding: 10px 20px 60px 20px;
  width: auto;
  scroll-margin-top: 60px;
}

.personal-profile {
  margin-top: 145px;
}

.profile img {
  border-radius: 50%;
  border: 5px solid rgb(135, 1, 1);
  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.66);
  width: 120%;
  margin-top: 145px;
  transition: transform 0.5s;
}

#profile-header {
  color: rgb(33, 29, 29);
  padding: 2px 2px 2px 2px;
  font-size: 20px;
  margin: 0px 0px 0px 50px;
}

h1, h3 {
  margin: 2px;
}

#profile-list {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 20px;
  border: 3px solid rgb(170, 1, 1);
  border-radius: 5px;
  box-shadow: 5px 5px 10px gray;
  background-color: rgb(255, 244, 244);
  line-height: 40px;
  font-size: 18px;
}

#portfolio-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center; /* Center items horizontally within the row */
  align-items: flex-start; /* Align items at the top of the container */
  scroll-margin-top: 85px;
  width: auto;
  height: 100%;
  padding: 20px 20px 50px 20px;
}


.portfolio {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  width: auto;
  padding: 15px;
  margin: 0px;
}

.card-links {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.card-links a {
  color: rgb(170, 1, 1)
}

.card-links a:hover {
  color: rgb(0, 0, 0);
  transform: scale(1.5);
  transition: transform 0.3s ease-in-out;
}

.card-links .link-icon {
  font-size: 1.5rem;
}

.card-links .link-icon:hover {
  color: rgb(0, 0, 0);
  transform: scale(1.3);
  transition: transform 0.3s ease-in-out;
}

#password-generator {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  box-shadow: 2px 2px 10px #333;
  border: 1px solid rgb(0, 0, 0);
}

.password-list {
  font-size: 14px;
  text-align: left;
  padding-left: 30px;
  padding-bottom: 10px;
  border-bottom: 1px solid black;
  margin-bottom: 5px;
}

.rotate-container {
  perspective: 1000px;
  padding: 15px;
}

.rotate-card {
  width: 400px;
  height: 250px;
  transform-style: preserve-3d;
  transition: transform 0.5s;
  display: flex;
  align-items: center;
  justify-content: center;
}

.rotate-card-inner {
  height: 100%;
  transform-style: preserve-3d;
  transition: transform 0.5s;
  transform-origin: center center;
}

.rotate-container:hover .rotate-card-inner {
  transform: rotateY(180deg); 
}

.rotate-card-front,
.rotate-card-back {
  width: 100%;
  height: 100%;
  position: absolute;
  backface-visibility: hidden;
}

.rotate-card-front {
  display: flex;
  justify-content: center;
  transform: rotateY(0deg);
}

.rotate-card-back {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  box-shadow: 2px 2px 10px #333;
  border: 1px solid rgb(0, 0, 0);
  background-color: rgb(255, 236, 236);
  transform: rotateY(180deg);
}

/* Tap Me Note */
.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: top;
  justify-content: flex-start;
  font-size: large;
  font-weight: bold;
}

.overlay p {
  margin: 10px;
  height: 23px;
  width: 80px;
  text-align: center;
  background-color: crimson;
  border-radius: 5px;
  border: 1px solid yellow;
}

/* Contact Card */
#contact-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
  scroll-margin-top: 120px;
  width: auto;
  height: 100%;
  padding: 20px 20px 50px 20px;
}

.contact {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  background-color: #f2f2f2;
  padding: 25px;
  border: 2px solid  rgb(170, 1, 1);
  border-radius: 5px;
  box-shadow: 2px 2px 10px #333;
  margin: auto;
  width: 60%;
}
#contact-form {
  width: 100%;
}

#contactMe {
  border-bottom: 1px solid gray;
}

.orange-icon {
  color: rgb(255, 77, 0);
}

.container h1 {
  font-size: 24px;
  margin-bottom: 20px;
}

.form-group {
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
}

.form-group label {
  font-weight: bold;
  margin-bottom: 8px;
}

.form-group input,
.form-group textarea {
  width: auto;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  font-size: 16px;
}

.form-group textarea {
  resize: vertical;
}

button[type="submit"] {
  background-color: rgb(170, 1, 1);
  color: #fff;
  padding: 10px 20px;
  border: none;
  border-radius: 4px;
  font-size: 16px;
  cursor: pointer;
}

button[type="submit"]:hover {
  background-color:  black;
}

.form-group input,
.form-group textarea,
button[type="submit"] {
  margin-left: 15px;
}

.form-group {
  padding-top: 15px;
}

.notification {
  display: none;
  color: red;
  font-size: 14px;
  margin-top: 5px;
}

.thank-you-message {
  background-color: #000000;
  color: white;
  padding: 9px;
  text-align: center;
  border-radius: 5px;
  display: inline-block;
  vertical-align: middle;
  margin-left: 10px;
}

/* Profiencies */
#proficiencies-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center; /* Center items horizontally within the row */
  align-items: flex-start; /* Align items at the top of the container */
  scroll-margin-top: 80px;
  width: auto;
  height: 100%;
  padding: 20px 20px 20px 20px;
  text-align: center;

}
.proficiencies {
  display: flex;
  flex-direction: column;
  padding: 40px 0px 0px 0px;
  justify-content: center;
  align-items: center;
}

#profTitle {
  position: relative;
}

#profTitle::before {
  content: '';
  position: absolute;
  bottom: -5px;
  left: -20%;
  width: 140%;
  height: 2px;
  background-color: #000000;
}

#proficiencies h1 {
  font-size: 40px;
  margin-bottom: 20px;
}

#proficiencies p {
  font-size: 18px;
  margin-bottom: 30px;
}

#proficiencies a {
  display: inline-block;
  background-color: rgb(170, 1, 1);
  color: #fff;
  padding: 10px 20px;
  border: none;
  border-radius: 4px;
  font-size: 16px;
  text-decoration: none;
  margin: 25px;
}

#proficiency-box {
  background-color: #f2f2f2;
  padding: 20px;
  border: 2px solid rgb(170, 1, 1);
  border-radius: 5px;
  margin: 30px;
}

.proficiency-box h2 {
  font-size: 20px;
  margin-bottom: 10px;
}

#proficiency-box ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding-left: 0;
}

#proficiency-box li {
  margin-right: 20px;
  margin-bottom: 5px;
}

#proficiency-box li::after {
  content: " | ";
  color: rgb(170, 1, 1);
  margin-left: 5px;
}

#proficiency-box li:last-child::after {
  content: none;
}

/* Resume */
#resume {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: auto;
}

iframe {
  width: 68%;
  height: 1375px;
  margin: auto;
}

#downloadBtn {
  background-color: rgb(170, 1, 1);
  color: #fff;
  padding: 10px 20px;
  border: none;
  border-radius: 4px;
  font-size: 16px;
  cursor: pointer;
  margin: 30px;
  align-items: center;
}

#downloadBtn:hover {
  background-color:  black;
}

/* Footer */
footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  border-top: 5px solid rgb(170, 1, 1);
  box-shadow: 5px 5px 10px 5px rgb(47, 32, 18);
  padding: 5px;
  background-image: url('./assets/header-background.png');
  background-size: cover;
}

.footer-icons {
  display: flex;
  justify-content: center;
}

.footer-icons a {
  margin: 10px 30px;
  color: rgb(255, 251, 246);
  transition: color 0.2s ease, box-shadow 0.2s ease;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); 
}

.footer-icons a:hover {
  color: rgb(170, 1, 1);
  filter: brightness(1.2);
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); 
}

